--- a/domaci3/css/style.css
+++ b/domaci3/css/style.css
@@ -28,6 +28,10 @@ body {
   justify-content: center;
 }
 
+h1 {
+  font-size: 48px;
+}
+
 .btn,
 .btn2 {
   box-shadow: 0px 1px 0px 0px #fff6af;
@@ -60,7 +64,7 @@ body {
 }
 
 #unos {
-  width: 180px;
+  width: 200px;
   height: 40px;
   border: none;
   border-radius: 5px;
@@ -68,10 +72,23 @@ body {
   font-size: 14px;
 }
 
-.brojac-box {
+#arrow-box {
   width: 50px;
   height: 50px;
   background-color: white;
   border-radius: 5px;
+  font-size: 38px;
   display: none;
+}
+
+#statistika {
+  display: none;
+}
+
+textarea {
+  padding: 15px;
+  text-align: center;
+  font-size: 18px;
+  border-radius: 5px;
+  border: none;
 }
