--- a/domaci3/css/style.css
+++ b/domaci3/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: whitesmoke;
+  background-color: black;
 }
 
 .form {
@@ -19,7 +19,7 @@ body {
   background-color: orange;
   gap: 30px;
   border-radius: 10px;
-  width: 50%;
+  flex-basis: 40%;
   height: 500px;
 }
 
@@ -29,7 +29,7 @@ body {
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 36px;
 }
 
 .btn,
@@ -91,4 +91,27 @@ textarea {
   font-size: 18px;
   border-radius: 5px;
   border: none;
+}
+
+@media screen and (min-width: 320px) {
+  .form {
+    flex-basis: 80%;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .form {
+    flex-basis: 80%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .form {
+    flex-basis: 80%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .form {
+    flex-basis: 40%;
+  }
 }
