--- a/domaci3/css/style.css
+++ b/domaci3/css/style.css
@@ -86,11 +86,20 @@ h1 {
 }
 
 textarea {
-  padding: 15px;
+  padding: 10px;
   text-align: center;
   font-size: 18px;
   border-radius: 5px;
   border: none;
+}
+
+#nagrada {
+  display: none;
+}
+img {
+  width: 100px;
+  padding: 15px;
+  border-radius: 20px;
 }
 
 @media screen and (min-width: 320px) {
